[package]
edition = "2021"
name = "restful_service"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = "0.4"
r2d2 = "0.8"
redis = {version = "0.25", features = ["r2d2"]}
sea-orm = {version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
]}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "signal"]}
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
